--- a/src/Components/Header/Header.css
+++ b/src/Components/Header/Header.css
@@ -3,8 +3,9 @@
     justify-content: space-between;
     align-items: center;
     border-bottom: 1px solid rgb(202, 202, 202);
-    padding-bottom: 0.4vh;
-    padding-top: 0.4vh;
+    height: 6vh;
+    padding-top: 0.3vh;
+    padding-bottom: 0.3vh;
 }
 
 #leftSideWrappeer{
