--- a/src/Components/Navbar/Navbar.css
+++ b/src/Components/Navbar/Navbar.css
@@ -3,16 +3,9 @@
 }
 
 #navbarWrapper{
-    /* position: absolute;
-    bottom: 0; */
     display: flex;
-    justify-content: space-between;
+    justify-content: space-around;
     align-items: center;
-    padding-left: 15vh;
-    padding-right: 15vh;
     border-top: 1px solid rgb(202, 202, 202);
-    position: fixed; 
-    bottom: 0; 
-    left:0; 
-    width:100%;
+    height: 6vh;
 }
