--- a/src/Components/ProfileStories/ProfileStories.css
+++ b/src/Components/ProfileStories/ProfileStories.css
@@ -1,4 +1,8 @@
 #storiesContainer{
-    height: 12vh;
+    height: 20vh;
     border-bottom: 1px solid rgb(202, 202, 202);
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+    overflow-x: scroll ;
 }
