--- a/src/Components/ProfileStories/ProfileStories.css
+++ b/src/Components/ProfileStories/ProfileStories.css
@@ -1,8 +1,9 @@
 #storiesContainer{
-    height: 20vh;
+    height: 16vh;
     border-bottom: 1px solid rgb(202, 202, 202);
     display: flex;
     align-items: center;
-    justify-content: space-around;
-    overflow-x: scroll ;
+    justify-content: space-between;
+    overflow-x: auto ;
 }
+
