finshing touches to comment section

--- a/src/Components/Center/Center.css
+++ b/src/Components/Center/Center.css
@@ -1,4 +1,8 @@
-#centerContainer{
+.center_container{
     overflow-y: auto;
-    max-height: 69vh;
+    max-height: 84vh;
 }
+
+.center_container::-webkit-scrollbar {
+    display: none;
+  }
