--- a/src/Components/Center/ProfileStories/ProfileStories.css
+++ b/src/Components/Center/ProfileStories/ProfileStories.css
@@ -1,9 +1,13 @@
-#storiesContainer{
+.stories_container{
     height: 15vh;
     border-bottom: 1px solid rgb(202, 202, 202);
     display: flex;
     align-items: center;
     justify-content: space-between;
     overflow-x: auto ;
+}
+
+.stories_container::-webkit-scrollbar{
+    display: none;
 }
 
