--- a/src/Components/Navbar/Navbar.css
+++ b/src/Components/Navbar/Navbar.css
@@ -1,15 +1,48 @@
-.navbar_container{
-    position: relative;   
+.navbar_container {
+  position: relative;
 }
 
-.navbar_wrapper{
+.navbar_wrapper {
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  border-top: 1px solid rgb(202, 202, 202);
+  height: 6vh;
+}
+
+.cursorStyle {
+  cursor: pointer;
+}
+
+.notification {
+    background-color: rgb(255, 112, 112);
+    width: 17vh;
+    height: 5vh;
+    border-radius: 10px;
+    position: absolute;
+    bottom: 8vh;
+    right: 16.5vh;
+    color: white;
     display: flex;
-    justify-content: space-around;
     align-items: center;
-    border-top: 1px solid rgb(202, 202, 202);
-    height: 6vh;
+    justify-content: space-around;
 }
 
-.cursorStyle{
-    cursor: pointer;
+
+@media only screen and (min-width: 600px) {
+  .navbar_container {
+    margin-left: 60vh;
+    margin-right: 60vh;
+  }
 }
+
+
+.material-symbols-outlined {
+  font-variation-settings:
+  'FILL' 1,
+  'wght' 400,
+  'GRAD' 0,
+  'opsz' 48
+  
+}
+
