--- a/src/Components/User/UserNavbar/userNavbar.css
+++ b/src/Components/User/UserNavbar/userNavbar.css
@@ -4,8 +4,17 @@
   display: flex;
   align-items: center;
   justify-content: space-around;
+  border-top: 1px solid rgb(202, 202, 202);
 }
 
 .icon{
     cursor: pointer;
+}
+
+@media only screen and (min-width: 600px) {
+  .userNavbarWrapper{
+    margin-left: 60vh;
+    margin-right: 60vh;
+
+  }
 }
